# puzzlebots

./: .clang-format  .gitignore  CMakeLists.txt  README.md  RTIMULib.ini  glmc_demo_main.c  lsan.supp  pi_sensors  pi_sensors_main.c  puzzle_bots_part1_main.c  puzzle_bots_part1_replay_benchmark_main.c  puzzle_bots_part1_test_main.c  puzzle_bots_part2_main.cpp  puzzle_bots_part2_test_main.cpp  sysprog-project.code-workspace  taakverdeling.md  valgrind.supp
game/bot_asm/: Assembler.cpp  Assembler.h  BitHelper.h  Board.cpp  Board.h  BotBerryConstants.h  BotBerryExceptions.cpp  BotBerryExceptions.h  BotModule.cpp  BotModule.h  Bus.cpp  Bus.h  CPU.cpp  CPU.h  CPUInstruction.cpp  CPUInstruction.h  DecisionOutput.cpp  DecisionOutput.h  Memory.cpp  Memory.h  VisionInput.cpp  VisionInput.h
game/bot_asm/programs/: assem_header.botasm  equtest.botasm  forward.botasm  forward.botbin  fsm.botasm  fsm.botbin  label.botasm  square.botasm  square.botbin  test.botasm  wallbump.botasm  wallbump.botbin
game/bot_asm/tests/: Assembler-test.cpp  BitReader-test.cpp  BitWriter-test.cpp  Bus-test.cpp  CPU-test.cpp  InstructionDecode-test.cpp  InstructionEncode-test.cpp  Integration-test.cpp
game/bot_automaton/: BotAutomaton_c_wrapper.cpp  BotAutomaton_c_wrapper.h  bot_automaton.h
game/es/: assemblage.c  assemblage.h  component_enums.h  component_structs.h  context.c  context.h  engine.c  engine.h  entity.h  es_memory_manager.c  es_memory_manager.h  es_memory_manager_collections.c  es_memory_manager_collections.h  game.c  game.h  game_util.h  system_enums.h
game/es/system/: action_system.c  action_system.h  activation_system.c  activation_system.h  animation_system.c  animation_system.h  bot_automaton_system.c  bot_automaton_system.h  bot_vision_system.c  bot_vision_system.h  button_system.c  button_system.h  camera_system.c  camera_system.h  container_system.c  container_system.h  endlevel_system.c  endlevel_system.h  eyeimu_system.c  eyeimu_system.h  gravity_system.c  gravity_system.h  input_system.c  input_system.h  led_system.c  led_system.h  move_system.c  move_system.h  render_system.c  render_system.h  teleport_system.c  teleport_system.h  visibility_system.c  visibility_system.h
game/fsm/: fsm.c  fsm.h
game/fsm/fsm-levels/: 1.fsm  2.fsm  3.fsm  4.fsm  5.fsm
game/graphics/: game.fragmentshader  game.pi.fragmentshader  game.pi.vertexshader  game.vertexshader  gl_actor.c  gl_actor.h  gl_button.c  gl_button.h  gl_door.c  gl_door.h  gl_exit.c  gl_exit.h  gl_floor.c  gl_floor.h  gl_hexprism.c  gl_hexprism.h  gl_teleport.c  gl_teleport.h  gl_tetrahedron.c  gl_tetrahedron.h  gl_tex_object.c  gl_tex_object.h  gl_wall.c  gl_wall.h  globject.h  opengl_game_renderer.c  opengl_game_renderer.h
game/imu/: RTIMU_c_wrapper.cpp  RTIMU_c_wrapper.h
game/led/: sense_led.c  sense_led.h
game/level/: levelloader.c  levelloader.h
libraries/glmc/src/: glmc_model.c  glmc_vector.c
sensors/: hts221.c  hts221.h  i2c.c  i2c.h  lps25h.c  lps25h.h
util/: benchmarking_utils.c  benchmarking_utils.h  sleep.h  util.c  util.h
